# blueprints

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  Pipfile  README.md  calculate.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_plot.txt  requirements_test.txt  structural_calculation_module.py  test_output.docx  test_report.docx  ~$st_report.docx
.github/: CODE_OF_CONDUCT.md  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  formula_request.yml  question.yml
.github/prompts/: casus_formula.prompt.md  casus_tests.prompt.md  comparison_formula.prompt.md  comparison_tests.prompt.md  equation_formula.prompt.md  equation_tests.prompt.md
.github/workflows/: build_deploy.yaml  code_coverage.yaml  greetings.yaml  minimum_code_coverage.yaml  test.yaml
blueprints/: __init__.py  cli.py  latex_to_word_document.py  math_helpers.py  report_to_word_document.py  tree_structure.md  type_alias.py  typehints.py  unit_conversion.py  validations.py
blueprints/calculations/: __init__.py
blueprints/checks/: __init__.py  _check_protocol.py  check_protocol.py  check_result.py
blueprints/codes/: __init__.py  __init__.pyi  formula.py  latex_formula.py  report.py
blueprints/geometry/: __init__.py  line.py  operations.py  point.py
blueprints/language/: __init__.py  _test.csv  aaa_example.csv  nl.csv  test.csv  translate.py  translations.csv
blueprints/materials/: __init__.py  _material.py  concrete.py  constants.py  reinforcement_steel.py  soil.py  steel.py  timber.py
blueprints/product_data/: __init__.py
blueprints/saf/: __init__.py
blueprints/soil_profiles/: __init__.py  soil_layer.py  soil_profile.py
blueprints/structural_elements/: __init__.py  beam.py
blueprints/structural_sections/: __init__.py  _cross_section.py  _cross_section_builder.py  _polygon_builder.py  _profile.py  cross_section_annular_sector.py  cross_section_circle.py  cross_section_cornered.py  cross_section_editor.py  cross_section_hexagon.py  cross_section_partial_tube.py  cross_section_quarter_circle.py  cross_section_quarter_circular_spandrel.py  cross_section_radius.py  cross_section_rectangle.py  cross_section_rhs_corner.py  cross_section_rhscf_corner.py  cross_section_shapes.py  cross_section_square_with_quarter_circle_cutout.py  cross_section_triangle.py  cross_section_tube.py  general_cross_section.py  section_forces.py
blueprints/utils/: __init__.py  _report_to_word.py  abc_enum_meta.py  formula.py  latex_formula.py  lazy_imports.py  map.py  math_helpers.py  report.py  report_helpers.py  report_to_word.py
docs/: .nav.yml  DOCS_README.md  __init__.py  index.md  requirements_docs.txt
docs/_overrides/: main.html
docs/_scripts/: __init__.py  generate_index.py  generate_notebook_code.py  generate_quick_reference.py  generate_reference_pages.py
docs/contribute/: cli.md  contributors.md  index.md
docs/data/: __init__.py
docs/development/: 986-material-decoupling-plan.md  986-proposal-issue.md
docs/examples/: circular_custom_reinforced_concrete_cross_section.ipynb  circular_custom_reinforced_concrete_cross_section.md  circular_reinforced_concrete_cross_section.ipynb  circular_reinforced_concrete_cross_section.md  index.md  nominal_concrete_cover.ipynb  nominal_concrete_cover.md  rectangular_custom_reinforced_concrete_cross_section.md  rectangular_reinforced_concrete_cross_section.ipynb  rectangular_reinforced_concrete_cross_section.md  steel_i_profile.ipynb  steel_profile_shapes.md  steel_strip_profile.ipynb
docs/getting_started/: changelog.md  installation.md  quick_start.md  roadmap.md
docs/guides/: index.md
docs/objects_overview/: index.md
docs/source/: __init__.py  api.rst  conf.py  examples.rst  index.rst  installation.rst  nominal_concrete_cover.rst  rcs.rst  user_guide.rst
examples/: rectangular_reinforced_cross_section.py
mkdocs-docs/: mkdocs.yml
mkdocs-docs/docs/: index.md
saf/results/: __init__.py
site_packages/annotated_doc-0.0.4.dist-info/: RECORD
site_packages/cytriangle/: __init__.py  ctriangle.pxd  cytriangle.c  cytriangle.pyx  cytriangleio.c  cytriangleio.pxd  cytriangleio.pyx
site_packages/cytriangle-3.0.2.dist-info/: METADATA  RECORD  WHEEL
site_packages/fastapi-0.135.1.dist-info/: RECORD
site_packages/fonttools-4.62.1.dist-info/: RECORD
site_packages/googletrans-4.0.2.dist-info/: METADATA  RECORD  entry_points.txt
site_packages/httpx-0.28.1.dist-info/: RECORD
site_packages/ipython-9.11.0.dist-info/: METADATA  RECORD  WHEEL
site_packages/ipywidgets-8.1.8.dist-info/: RECORD
site_packages/markdown_it_py-4.0.0.dist-info/: RECORD
site_packages/matplotlib-3.10.8.dist-info/: RECORD
site_packages/more_itertools-10.8.0.dist-info/: RECORD
site_packages/numpy-2.4.3.dist-info/: RECORD
site_packages/pillow-12.1.1.dist-info/: RECORD
site_packages/pydantic-2.12.5.dist-info/: RECORD
site_packages/pygments-2.19.2.dist-info/: RECORD
site_packages/rich-14.3.3.dist-info/: RECORD
site_packages/scipy-1.17.1.dist-info/: RECORD
site_packages/sectionproperties-3.10.2.dist-info/: METADATA  RECORD
site_packages/shapely/: __init__.py
site_packages/shapely-2.1.2.dist-info/: DELVEWHEEL  METADATA  RECORD
site_packages/starlette-0.52.1.dist-info/: RECORD
site_packages/uvicorn-0.41.0.dist-info/: RECORD
tests/: test_cli.py  test_dummy.py  test_latex_to_word_document.py  test_math_helpers.py  test_report_to_word_document.py  test_validations.py
tests/checks/: __init__.py  test_check_protocol.py  test_check_result.py  test_exposure_classes.py
tests/codes/: test_formula.py  test_latex_formula.py  test_report.py
tests/geometry/: __init__.py  conftest.py  test_line.py  test_operations.py
tests/language/: aaa_example.csv  test_translate.py
tests/materials/: __init__.py  conftest.py  test_concrete.py  test_concrete_generic.py  test_reinforcement_steel.py  test_reinforcement_steel_generic.py  test_soil.py  test_steel.py  test_steel_generic.py  (+1 more)
(+2551 files in other folders)
