[project]
name = "blue-prints"
version = "0.5.2"
description = "Blueprints, open source python package for civil engineering calculations."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Blueprints" }]
maintainers = [
    { name = "Enrique García Méndez", email = "enriquegarcia@live.nl" },
    { name = "Blueprints Maintainers" },
]
keywords = [
    "Civil engineering",
    "Material properties",
    "Structural engineering",
    "Structural analysis",
    "Eurocodes",
    "European building codes",
]
license = { text = "MIT" }
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=1.25.2",
    "sectionproperties>=3.8.0",
    "shapely>=2.0.1",
]

[project.urls]
homepage = "https://blueprints.readthedocs.io"
documentation = "https://blueprints.readthedocs.io"
repository = "https://github.com/Blueprints-org/blueprints"
issues = "https://github.com/Blueprints-org/blueprints/issues"
changelog = "https://github.com/Blueprints-org/blueprints/releases"

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.14.3",
    "pre-commit==4.3.0",
    "types-shapely==2.1.0.20250917",
    "icecream==2.1.8",
]
docs = [
    "mkdocs ~= 1.6.1",
    "mkdocs-material ~= 9.6.14",
    "pygments ~= 2.19.1",
    "mkdocs-open-in-new-tab ~= 1.0.8",
    "mkdocs-git-revision-date-localized-plugin ~= 1.4.7",
    "mkdocstrings[python] ~= 0.29.1",
    "mkdocs-gen-files ~= 0.5.0",
    "mkdocs-awesome-nav ~= 3.1.2",
    "natsort ~= 8.4.0",
    "mkdocs-jupyter ~= 0.25.1",
]
test = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-describe==3.0.0",
    "pytest-pspec==0.0.4",
    "pytest-raises==0.11",
    "pytest-xdist==3.8.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.mypy]
packages = "blueprints"
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blueprints"]

[tool.pytest.ini_options]
markers = [
    "slow: marks as slow (deselect with '-m \"not slow\"')",
]