[project]
name = "blue-prints"
version = "0.6.1"
description = "Blueprints, open source python package for civil engineering calculations."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Blueprints" }]
maintainers = [
    { name = "Enrique García Méndez", email = "enriquegarcia@live.nl" },
    { name = "Blueprints Maintainers" },
]
keywords = [
    "Civil engineering",
    "Material properties",
    "Structural engineering",
    "Structural analysis",
    "Eurocodes",
    "European building codes",
]
license = { text = "MIT" }
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "sectionproperties>=3.10.0",
    "shapely>=2.1.2",
    # Required for Report generation
    "googletrans>=4.0.2",
    "python-docx>=1.2.0",
    "latex2mathml>=3.78.1",
    "mathml2omml>=0.0.2",
    # Required for working with maps and geospatial data
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "selenium>=4.40.0",
    "chromedriver-autoinstaller>=0.6.4",
]

[project.scripts]
blueprints = "blueprints.cli:app"
bp = "blueprints.cli:app"

[dependency-groups]
dev = [
    "ty==0.0.9",
    "ruff==0.14.10",
    "pre-commit==4.5.1",
    "types-shapely==2.1.0.20250917",
    "icecream==2.1.10",
    "typer>=0.9.0",
    "rich>=13.7.0",
]
docs = [
    "mkdocs ~= 1.6.1",
    "mkdocs-material>=9.6.14,<9.8.0",
    "pygments ~= 2.19.1",
    "mkdocs-open-in-new-tab ~= 1.0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7,<1.6.0",
    "mkdocstrings[python]>=0.29.1,<1.1.0",
    "mkdocs-gen-files>=0.5,<0.7",
    "mkdocs-awesome-nav>=3.1.2,<3.4.0",
    "natsort ~= 8.4.0",
    "mkdocs-jupyter ~= 0.25.1",
    "markdown-exec[ansi]>=1.11.0",
]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-describe==3.1.0",
    "pytest-pspec==0.0.4",
    "pytest-raises==0.11",
    "pytest-sugar>=1.1.1",
    "pytest-xdist==3.8.0",
]
cli = [
    {include-group = "dev"},
    {include-group = "test"},
    {include-group = "docs"},
]

[project.urls]
homepage = "https://blueprints.readthedocs.io"
documentation = "https://blueprints.readthedocs.io"
repository = "https://github.com/Blueprints-org/blueprints"
issues = "https://github.com/Blueprints-org/blueprints/issues"
changelog = "https://github.com/Blueprints-org/blueprints/releases"
youtube = "https://www.youtube.com/@blueprintsorg"

[[tool.uv.index]]
url = "https://pkgs.dev.azure.com/bamict/Engines%20-%20BAM%20Digital%20Design/_packaging/engines/pypi/simple/"

[tool.uv]
default-groups = ["dev", "test"]

[[tool.uv.index]]
url = "https://pkgs.dev.azure.com/bamict/Engines%20-%20BAM%20Digital%20Design/_packaging/dd-cli/pypi/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blueprints"]

[tool.pytest.ini_options]
markers = [
    "slow: marks as slow (deselect with '-m \"not slow\"')",
]
